# notaminfo-swarmified

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-old  README.md  compose.deploy.yaml  compose.test.yaml  compose.yaml  django-entry.sh  jenkinsfile  manage.py  notaminfo.Dockerfile  pyproject.toml  pytest.ini
config/: asgi.py  celery.py  env.py  urls.py  wsgi.py
config/django/: base.py  production.py
config/django/dockerized/: dev.py
config/settings/: celery.py
locustfiles/: locust.py
notaminfo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
notaminfo/settings/: common.py  dev.py  prod.py
notaminfo/settings/dockerized/: dev.py
textprovider/: apps.py  filters.py  models.py  notamtoolkit.py  pagination.py  scrapper.py  serializers.py  tasks.py  urls.py  views.py
textprovider/migrations/: 0001_initial.py
textprovider/tests/: conftest.py  test_notams_endpoint.py
