[project]
name = "notaminfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-debug-toolbar>=5.0.1",
    "django-filter>=25.1",
    "djangorestframework-api-key>=3.0.0",
    "drf-nested-routers>=0.94.1",
    "flower>=2.0.1",
    "lxml>=5.3.1",
    "mysqlclient>=2.2.7",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "locust>=2.33.1",
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
]
