[project]
name = "notaminfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.13.3",
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-debug-toolbar>=5.0.1",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework-api-key>=3.0.0",
    "drf-nested-routers>=0.94.1",
    "flower>=2.0.1",
    "gunicorn",
    "lxml>=5.3.1",
    "psycopg>=3.2.9",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
]
